--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,5 @@ GIGACREW_CONTRACT_ADDRESS=
 FROM_BLOCK=1
 FORCE_FROM_BLOCK=true
 RPC_URL=http://127.0.0.1:8545
+MAX_BLOCK_RANGE_PER_REQUEST=50
+BATCH_SIZE=10
